--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ target/
 
 ### IntelliJ IDEA ###
 .idea/
+.idea
 *.iws
 *.iml
 *.ipr
@@ -22,3 +23,5 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+LOG_PATH_IS_UNDEFINED/
+.idea/*
