--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -23,3 +23,7 @@ eureka.server.evictionIntervalTimerInMs=5000
 
 #关闭注册中心的自我保护机制：自我保护机制会统计心跳包失败比率如果15分钟低于85%,开启自我保护，将当前注册实例保护起来
 eureka.server.enable-self-preservation=false
+
+# 日志配置
+logging.config=classpath:logback.xml
+logging.path=/server/tomcat/logs
