--- a/ribbon-consumer/src/main/resources/application.properties
+++ b/ribbon-consumer/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8763
 info.version=@project.version@
 
 #actuaor
-spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream
+#spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream
 management.security.enabled: false
 
 #注册中心地址
