--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -42,7 +42,12 @@
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>yonyou.esn</groupId>
+            <artifactId>common-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
