--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8762
 
 info.version=@project.version@
 management.security.enabled: false
-spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream
+#spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream
 
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://springcloud:openapi@localhost:8761/eureka/
