--- a/hystrix-dashboard/src/main/resources/application.properties
+++ b/hystrix-dashboard/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=test
 #应用（服务）名称
-spring.application.name=ribbon-consumer
-server.port=8763
+spring.application.name=hystrix-dashboard
+server.port=8764
 info.version=@project.version@
 
 #actuaor
