--- a/turbine-server/src/main/resources/application.properties
+++ b/turbine-server/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.profiles.active=test
 #应用（服务）名称
-spring.application.name=ribbon-consumer
-server.port=8763
+spring.application.name=turbine-server
+server.port=8765
 info.version=@project.version@
 
 #actuaor
 #spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream
-management.security.enabled: false
+#management.security.enabled: false
+management.port=8080
 
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://springcloud:openapi@localhost:8761/eureka/
@@ -20,3 +21,8 @@ eureka.instance.lease-expiration-duration-in-seconds=90
 # 日志配置
 logging.config=classpath:logback.xml
 logging.path=/server/tomcat/logs
+
+#turbine配置
+turbine.app-config=RIBBON-CONSUMER
+turbine.cluster-name-expression=new String("default")
+turbine.combine-host-port=true
