--- a/turbine-server/src/main/resources/application.properties
+++ b/turbine-server/src/main/resources/application.properties
@@ -6,8 +6,7 @@ info.version=@project.version@
 
 #actuaor
 #spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream
-#management.security.enabled: false
-management.port=8080
+management.security.enabled: false
 
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://springcloud:openapi@localhost:8761/eureka/
@@ -26,3 +25,13 @@ logging.path=/server/tomcat/logs
 turbine.app-config=RIBBON-CONSUMER
 turbine.cluster-name-expression=new String("default")
 turbine.combine-host-port=true
+
+spring.rabbitmq.address=172.20.1.177
+spring.rabbitmq.host=172.20.1.177
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=esnmq
+spring.rabbitmq.password=wE2Ew0wwGS
+spring.rabbitmq.virtual-host=/esnhost
+
+spring.cloud.stream.rabbit.bindings.test.consumer.prefix=z
+spring.cloud.stream.bindings.input.group=default
