--- a/ribbon-consumer/pom.xml
+++ b/ribbon-consumer/pom.xml
@@ -49,9 +49,16 @@
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 		</dependency>
 
+		<!--hystrix熔断器-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
+
+		<!--stream-rabbit-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-netflix-hystrix-amqp</artifactId>
 		</dependency>
 
 	</dependencies>
